# patent-lawer-space

./: .gitignore  CLAUDE.md  README.md
.claude/: .clauignore  README.md
.claude/commands/: analyze-claims.md  cpc-classify.md  draft-patent.md  fto.md  h01l-draft.md  invention-disclosure.md  patentability.md  prior-art.md  review.md
.claude/skills/: README.md
.claude/skills/claims-engineer/: SKILL.md
.claude/skills/fto-analyst/: SKILL.md
.claude/skills/patent-drafter/: SKILL.md
.claude/skills/patent-examiner/: SKILL.md
.claude/skills/prior-art-hunter/: SKILL.md
docs/: getting-started.md  h01l-prior-art-search-guide.md  h01l-quick-start.md  h01l-terminology-reference.md
examples/: .gitkeep
mcp-server/: .gitignore  INSTALL.md  README.md  claude-desktop-config.json  pyproject.toml  requirements.txt  run.py
mcp-server/patent_tools_mcp/: __init__.py  __main__.py  server.py
templates/abstracts/: abstract-template.md
templates/analysis/: freedom-to-operate.md  invention-disclosure.md  patentability-analysis.md  prior-art-analysis.md
templates/applications/: h01l-semiconductor-template.md  utility-patent-template.md
templates/claims/: claims-template.md  h01l-claims-template.md
templates/specifications/: detailed-description-template.md
tools/: claim-analyzer.py  prior-art-search.py  word-count.py
